# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import profilesRouter from "./profiles";
 import listingsRouter from "./listings";
 import messagesRouter from "./messages";
 import statsRouter from "./stats";
+import ratingsRouter from "./ratings";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(profilesRouter);
 router.use(listingsRouter);
 router.use(messagesRouter);
 router.use(statsRouter);
+router.use(ratingsRouter);
+router.use(adminRouter);
 
 export default router;
